# NutriCore

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  WEEKLY_LOG.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py
app/agents/data_insight/: __init__.py  dify_client.py  echarts.py  nl2sql.py
app/agents/meal_plan/: __init__.py  (+5 more)
app/api/: routes_admin.py  routes_auth.py  routes_chat.py  routes_health.py  routes_insight.py  routes_plan.py  routes_profile.py  routes_screening.py  routes_share.py
app/auth/: __init__.py  bootstrap.py  jwt.py  passwords.py  security.py
app/clients/: __init__.py  milvus.py  redis_client.py
app/core/: cache.py  db.py  embeddings.py  llm.py  storage.py
app/evaluation/: metrics.py  screening_eval.py
app/observability/: __init__.py  logging.py  metrics.py  middleware.py
app/rag/: __init__.py  bm25.py  hybrid_retrieval.py  ingestion.py  reranker.py
app/schemas/: models.py
app/tools/: __init__.py  bmi.py  disease_taboo.py  energy.py  food_nutrition.py  recipe.py
docs/: DEPLOYMENT.md  HARDWARE.md  architecture.md
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue
scripts/: demo.py  init_kb.py  reseed_demo.py  seed.py
tests/: test_auth.py  test_echarts.py  test_meal_plan_validator.py  test_nl2sql_safety.py  test_nrs2002.py  test_nutritionist_graph.py  test_portions.py  test_screening_eval.py  test_screening_presentation.py  test_screening_routing.py  test_short_term_memory.py
(+28 files in other folders)
