[project]
name = "nutricore"
version = "0.2.0"
description = "AI 营养健康多智能体协同平台"
requires-python = ">=3.11"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "PL", "RUF"]
ignore = ["E501", "PLR0913", "PLR2004", "PLR0915"]

[tool.pytest.ini_options]
addopts = "-q --tb=short"
testpaths = ["tests"]
asyncio_mode = "auto"
