[project]
name = "nutricore"
version = "0.2.0"
description = "AI 营养健康多智能体协同平台"
requires-python = ">=3.11"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "PL", "RUF"]
ignore = [
    "E501",                       # 行宽交给 line-length，不二次报
    "PLR0913", "PLR2004", "PLR0915",
    # 中文项目:全角标点（：，（） 等）在中文字符串/注释/文档串里是正确写法,
    # RUF001/002/003 的「ambiguous unicode」对中文是误报,整体忽略。
    "RUF001", "RUF002", "RUF003",
    "PLC0415",                    # 有意为之的函数内惰性 import（子 Agent 懒加载 / 测试桩）
    "B008",                       # FastAPI 惯用法:Depends() 作为默认参数
    "PLW0603",                    # 单例/惰性初始化用 global（_graph / _reranker / _FONT_REGISTERED）
    "PLR0911",                    # 分层 gate（intent_router）多 return 是有意设计
]

[tool.ruff.lint.per-file-ignores]
# 测试里 monkeypatch 替身/惰性 import 是常态,放宽
"tests/**" = ["B017"]

[tool.pytest.ini_options]
addopts = "-q --tb=short"
testpaths = ["tests"]
asyncio_mode = "auto"
